--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
         <p>© 2025 Todos os direitos reservados - @clebioz</p>
     </footer>
 
+    <!-- Contador S12 oculto - funciona globalmente -->
+    <div style="position: absolute; left: -9999px; visibility: hidden; opacity: 0;">
+        <a href='https://contador.s12.com.br'>
+            <img src='https://contador.s12.com.br/img-z8xy17ZZw4Z1Cz2c-3.gif' border='0' alt='contador de visitas' id="s12-counter">
+        </a>
+        <script type='text/javascript' src='https://contador.s12.com.br/ad.js?id=z8xy17ZZw4Z1Cz2c'></script>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
