--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <div class="counter-display">
             <div align=center>
                 <a href='https://contador.s12.com.br'>
-                    <img src='https://contador.s12.com.br/img-wYDd23ac6A024y2w-20.gif' border='0' alt='contador de acesso grátis'>
+                    <img src='https://contador.s12.com.br/img-waCwZC9c8W51yDyW-20.gif' border='0' alt='contador de visitas gratis'>
                 </a>
-                <script type='text/javascript' src='https://contador.s12.com.br/ad.js?id=wYDd23ac6A024y2w'></script>
+                <script type='text/javascript' src='https://contador.s12.com.br/ad.js?id=waCwZC9c8W51yDyW'></script>
                 <br>
                 <a href='https://meuip.page/qual-e-o-meu-ip/' target='_blank'>
                     <img src='https://img.meuip.page/selo-1c6DDZ4wdxyDZ67w.gif' alt='qual meu ip?' border='0'>
