--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <div class="counter-display">
             <div align=center>
                 <a href='https://contador.s12.com.br'>
-                    <img src='https://contador.s12.com.br/img-waCwZC9c8W51yDyW-20.gif' border='0' alt='contador de visitas gratis'>
+                    <img src='https://contador.s12.com.br/img-Z3yb861z5B4W40d7-20.gif' border='0' alt='contador de visitas'>
                 </a>
-                <script type='text/javascript' src='https://contador.s12.com.br/ad.js?id=waCwZC9c8W51yDyW'></script>
+                <script type='text/javascript' src='https://contador.s12.com.br/ad.js?id=Z3yb861z5B4W40d7'></script>
                 <br>
                 <a href='https://meuip.page/qual-e-o-meu-ip/' target='_blank'>
-                    <img src='https://img.meuip.page/selo-1c6DDZ4wdxyDZ67w.gif' alt='qual meu ip?' border='0'>
+                    <img src='https://img.meuip.page/selo-wdZcz3wb6wc5C032.gif' alt='meu endereço ip' border='0'>
                 </a>
             </div>
         </div>
